--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,42 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header class="navbar navbar-static-top">
+	<div class="container">
+		<div class="navbar-header">
+			<buttton class="navbar-toggle"></buttton>
+			<a href="/" class="navbar-brand">Mercado Camiones</a>
+		</div>
+		<nav class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="#">Inicio</a></li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">Publicar</a></li>
+				<li><a href="#">Iniciar sesion</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<%= yield %>
+		</div>
+	</div>
+</div>
 
-<%= yield %>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53118901-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
